Made nav menu fixed at top to be visible all the time

--- a/sources/header/style/header.sass
+++ b/sources/header/style/header.sass
@@ -4,7 +4,11 @@
   // border: 1px solid red
   background: $main-bg-color
   z-index: 199
-  position: relative
+  position: fixed
+  top: 0
+  right: 0
+  left: 0
+  box-shadow: 0 0 5px rgba(0, 0, 0, .5)
 
 .header
   // border: 2px solid green
