--- a/sources/style/_common.sass
+++ b/sources/style/_common.sass
@@ -14,6 +14,12 @@ body
 .hidden
   display: none
 
+.content
+  margin-top: 60px
+
+  @media (min-width: $sizeS)
+    margin-top: 100px
+
 .title
   color: $nav-item-color
   font-family: $main-serif-font
